# pygmsh

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CITATION.cff  COPYING  LICENSE.txt  MANIFEST.in  Makefile  README.md  __init__.py  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
doc/: Makefile  built_in.rst  common.rst  conf.py  functions.rst  geo.rst  geometry.rst  index.rst  occ.rst  opencascade.rst  requirements.txt
examples/: pipe-with-rings  screw  swiss-cheese  torus-crowd
pygmsh/: __about__.py  __init__.py  _cli.py  _optimize.py  basic.py  bspline.py  circle.py  circle_arc.py  compound_line.py  compound_surface.py  compound_volume.py  dummy.py  ellipse_arc.py  extra.py  geometry.py  helper.py  helpers.py  line.py  line_base.py  line_loop.py  plane_surface.py  point.py  reader.py  ruled_surface.py  spline.py  surface.py  surface_base.py  surface_loop.py  volume.py  volume_base.py  writer.py
pygmsh/built_in/: __init__.py  bspline.py  circle_arc.py  compound_line.py  compound_surface.py  compound_volume.py  curve_loop.py  define_constant.py  dummy.py  ellipse_arc.py  geometry.py  line.py  line_base.py  line_loop.py  plane_surface.py  point.py  point_base.py  spline.py  surface.py  surface_base.py  surface_loop.py  volume.py  volume_base.py
pygmsh/common/: bspline.py  circle_arc.py  curve_loop.py  dummy.py  ellipse_arc.py  geometry.py  line.py  line_base.py  plane_surface.py  point.py  polygon.py  size_field.py  spline.py  surface.py  surface_loop.py  volume.py
pygmsh/geo/: geometry.py
pygmsh/occ/: ball.py  boolean.py  box.py  cone.py  cylinder.py  disk.py  dummy.py  geometry.py  rectangle.py  torus.py  wedge.py
pygmsh/opencascade/: __init__.py  ball.py  boolean.py  box.py  circle_arc.py  cone.py  curve_loop.py  cylinder.py  disk.py  dummy.py  ellipsoid.py  geometry.py  line.py  line_base.py  plane_surface.py  point.py  rectangle.py  surface_base.py  torus.py  volume_base.py  wedge.py
python4gmsh/: basic.py  extra.py
src/pygmsh/: __about__.py  __init__.py  _cli.py  _optimize.py  helpers.py
test/: helpers.py  test.py  test_airfoil.py  test_boolean.py  test_booleans.py  test_boundary_layers.py  test_bsplines.py  test_circle.py  test_circle_transform.py  test_cube.py  test_define_constant.py  test_ellipsoid.py  test_extrusion_entities.py  test_factory.py  test_helpers.py  test_hex.py  test_hole_in_square.py  test_in_surface.py  test_in_volume.py  test_layers.py  test_logo.py  test_meshio_logo.py  test_opencascade_ball.py  test_opencascade_boolean.py  test_opencascade_box.py  test_opencascade_builtin_mix.py  test_opencascade_cone.py  test_opencascade_cylinder.py  test_opencascade_ellipsoid.py  test_opencascade_extrude.py  test_opencascade_extrude2.py  test_opencascade_regular_extrusion.py  test_opencascade_torus.py  test_opencascade_wedge.py  test_optimize.py  test_pacman.py  test_physical.py  test_pipes.py  test_pygmsh.py  test_quads.py  (+19 more)
test/built_in/: test_airfoil.py  test_ball_with_stick.py  test_boundary_layers.py  test_bsplines.py  test_circle.py  test_circle_transform.py  test_cube.py  test_ellipsoid.py  test_embed.py  test_extrusion_entities.py  test_hex.py  test_hole_in_square.py  test_in_volume.py  test_layers.py  test_pacman.py  test_physical.py  test_pipes.py  test_quads.py  test_recombine.py  test_rectangle.py  test_rectangle_with_hole.py  test_regular_extrusion.py  test_rotated_layers.py  test_rotation.py  test_screw.py  test_splines.py  test_subdomains.py  test_swiss_cheese.py  test_symmetrize.py  test_tori.py  test_torus.py  test_torus_crowd.py  test_transfinite.py  test_translations.py  test_unordered_unoriented.py  test_volume.py
test/examples/: __init__.py  airfoil.py  airfoilmesher.py  ball.py  bend.README  bend.csv  bend.py  boolean.py  boolean_diff.py  boolean_int.py  boolean_union.py  boundary_layers.py  bsplines.py  circle.py  cube.py  ellipsoid.py  factory.py  flow_around_airfoil.py  hole_in_box.py  hole_in_square.py  pacman.py  pipe_with_rings.py  pipes.py  rectangle-with-hole.py  rectangle.py  rectangle_with_hole.py  screw  screw.py  subdomains.py  swiss-cheese  swiss_cheese.py  tori.py  torus-crowd  torus.py  torus_crowd.py
test/occ/: test_opencascade_ball.py  test_opencascade_boolean.py  test_opencascade_booleans.py  test_opencascade_builtin_mix.py  test_opencascade_cone.py  test_opencascade_cylinder.py  test_opencascade_ellipsoid.py  test_opencascade_regular_extrusion.py  test_opencascade_torus.py  test_opencascade_wedge.py  test_refinement.py
test/opencascade/: helpers.py  test_logo.py  test_meshio_logo.py  test_opencascade_ball.py  test_opencascade_boolean.py  test_opencascade_booleans.py  test_opencascade_box.py  test_opencascade_builtin_mix.py  test_opencascade_cone.py  test_opencascade_cylinder.py  test_opencascade_ellipsoid.py  test_opencascade_extrude.py  test_opencascade_regular_extrusion.py  test_opencascade_torus.py  test_opencascade_wedge.py  test_refinement.py  test_translations.py
tests/: test_extrusion_entities.py  test_helpers.py  test_labels.py  test_optimize.py
tests/built_in/: test_circle_transform.py  test_embed.py  test_hex.py  test_hole_in_square.py  test_physical.py  test_rotated_layers.py  test_swiss_cheese.py  test_symmetrize.py  test_tori.py  test_torus.py  test_torus_crowd.py  test_volume.py
tests/occ/: test_ball_with_stick.py  test_logo.py  (+6 more)
tools/: pygmsh-convert  pygmsh_convert
(+26 files in other folders)
