[metadata]
name = pygmsh
version = 6.1.1
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Python frontend for Gmsh
url = https://github.com/nschloe/pygmsh
project_urls =
    Code=https://github.com/nschloe/pygmsh
    Documentation=https://pygmsh.readthedocs.org/en/latest
    Issues=https://github.com/nschloe/pygmsh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    mesh
    gmsh
    mesh generation
    mathematics

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    meshio >= 4, <5
    numpy >= 1.9
    importlib_metadata
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
